Bug 258203 - KDevelop crashed while I was editing a C file
Summary: KDevelop crashed while I was editing a C file
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: Vi Input Mode (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-28 18:38 UTC by Leandro Santiago da Silva
Modified: 2010-12-02 20:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leandro Santiago da Silva 2010-11-28 18:38:06 UTC
Application: kdevelop (4.1.60)
KDE Platform Version: 4.5.3 (KDE 4.5.3)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-23-generic i686
Distribution: Ubuntu 10.10

-- Information about the crash:
- What I was doing when the application crashed:
I was editing a C main.c file, which include a library named eet (corrected added in the project). When I tried to autocomplete a var type, kdevelop crahed.

-- Backtrace:
Application: KDevelop (kdevelop), signal: Aborted
[Current thread is 1 (Thread 0xb6585710 (LWP 6646))]

Thread 10 (Thread 0xb32eab70 (LWP 6647)):
#0  0x00cae416 in __kernel_vsyscall ()
#1  0x00230884 in pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_timedwait.S:236
#2  0x06f1294f in wait (this=0x9f3531c, mutex=0x9f35320, time=1000) at thread/qwaitcondition_unix.cpp:86
#3  QWaitCondition::wait (this=0x9f3531c, mutex=0x9f35320, time=1000) at thread/qwaitcondition_unix.cpp:160
#4  0x0136a6d6 in KDevelop::DUChainPrivate::CleanupThread::run (this=0x9f35310) at /home/tenchi/projects/kdevelop/kdevplatform/language/duchain/duchain.cpp:283
#5  0x06f11df9 in QThreadPrivate::start (arg=0x9f35310) at thread/qthread_unix.cpp:266
#6  0x0022bcc9 in start_thread (arg=0xb32eab70) at pthread_create.c:304
#7  0x073936be in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 9 (Thread 0xb08fbb70 (LWP 6695)):
#0  0x07986e36 in clock_gettime (clock_id=127447028, tp=0xb08fafa0) at ../sysdeps/unix/clock_gettime.c:100
#1  0x06f6d50b in do_gettime () at tools/qelapsedtimer_unix.cpp:105
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:119
#3  0x070446e5 in QTimerInfoList::updateCurrentTime (this=0xa583e4c) at kernel/qeventdispatcher_unix.cpp:339
#4  0x0704472a in QTimerInfoList::timerWait (this=0xa583e4c, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x070427a8 in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xb08fb0cc) at kernel/qeventdispatcher_glib.cpp:136
#6  0x0704283d in timerSourcePrepare (source=0x0, timeout=0x798aff4) at kernel/qeventdispatcher_glib.cpp:169
#7  0x0154fe6a in g_main_context_prepare () from /lib/libglib-2.0.so.0
#8  0x01550279 in ?? () from /lib/libglib-2.0.so.0
#9  0x01550848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#10 0x0704259f in QEventDispatcherGlib::processEvents (this=0xa590b00, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#11 0x07012609 in QEventLoop::processEvents (this=0xb08fb2a0, flags=) at kernel/qeventloop.cpp:149
#12 0x07012a8a in QEventLoop::exec (this=0xb08fb2a0, flags=...) at kernel/qeventloop.cpp:201
#13 0x06f0eb7e in QThread::exec (this=0xa6b14e0) at thread/qthread.cpp:490
#14 0x01458761 in KDevelop::CompletionWorkerThread::run (this=0xa6b14e0) at /home/tenchi/projects/kdevelop/kdevplatform/language/codecompletion/codecompletionmodel.cpp:80
#15 0x06f11df9 in QThreadPrivate::start (arg=0xa6b14e0) at thread/qthread_unix.cpp:266
#16 0x0022bcc9 in start_thread (arg=0xb08fbb70) at pthread_create.c:304
#17 0x073936be in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 8 (Thread 0xb10fcb70 (LWP 6854)):
#0  0x07986e36 in clock_gettime (clock_id=127447028, tp=0xb10fbfa0) at ../sysdeps/unix/clock_gettime.c:100
#1  0x06f6d50b in do_gettime () at tools/qelapsedtimer_unix.cpp:105
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:119
#3  0x070446e5 in QTimerInfoList::updateCurrentTime (this=0xa84d6ec) at kernel/qeventdispatcher_unix.cpp:339
#4  0x0704472a in QTimerInfoList::timerWait (this=0xa84d6ec, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x070427a8 in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xb10fc0cc) at kernel/qeventdispatcher_glib.cpp:136
#6  0x0704283d in timerSourcePrepare (source=0x0, timeout=0x798aff4) at kernel/qeventdispatcher_glib.cpp:169
#7  0x0154fe6a in g_main_context_prepare () from /lib/libglib-2.0.so.0
#8  0x01550279 in ?? () from /lib/libglib-2.0.so.0
#9  0x01550848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#10 0x0704259f in QEventDispatcherGlib::processEvents (this=0xa65ad88, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#11 0x07012609 in QEventLoop::processEvents (this=0xb10fc2a0, flags=) at kernel/qeventloop.cpp:149
#12 0x07012a8a in QEventLoop::exec (this=0xb10fc2a0, flags=...) at kernel/qeventloop.cpp:201
#13 0x06f0eb7e in QThread::exec (this=0xa605690) at thread/qthread.cpp:490
#14 0x01458761 in KDevelop::CompletionWorkerThread::run (this=0xa605690) at /home/tenchi/projects/kdevelop/kdevplatform/language/codecompletion/codecompletionmodel.cpp:80
#15 0x06f11df9 in QThreadPrivate::start (arg=0xa605690) at thread/qthread_unix.cpp:266
#16 0x0022bcc9 in start_thread (arg=0xb10fcb70) at pthread_create.c:304
#17 0x073936be in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 7 (Thread 0xabfb9b70 (LWP 6855)):
#0  0x0154fdab in g_main_context_prepare () from /lib/libglib-2.0.so.0
#1  0x01550279 in ?? () from /lib/libglib-2.0.so.0
#2  0x01550848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x0704259f in QEventDispatcherGlib::processEvents (this=0x9ac9e20, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#4  0x07012609 in QEventLoop::processEvents (this=0xabfb92a0, flags=) at kernel/qeventloop.cpp:149
#5  0x07012a8a in QEventLoop::exec (this=0xabfb92a0, flags=...) at kernel/qeventloop.cpp:201
#6  0x06f0eb7e in QThread::exec (this=0xa590528) at thread/qthread.cpp:490
#7  0x01458761 in KDevelop::CompletionWorkerThread::run (this=0xa590528) at /home/tenchi/projects/kdevelop/kdevplatform/language/codecompletion/codecompletionmodel.cpp:80
#8  0x06f11df9 in QThreadPrivate::start (arg=0xa590528) at thread/qthread_unix.cpp:266
#9  0x0022bcc9 in start_thread (arg=0xabfb9b70) at pthread_create.c:304
#10 0x073936be in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 6 (Thread 0xaa535b70 (LWP 6891)):
#0  0x00cae416 in __kernel_vsyscall ()
#1  0x002304dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0x04c56877 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x4d551a0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#3  0x04c568c1 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x4d551a0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#4  0x0022bcc9 in start_thread (arg=0xaa535b70) at pthread_create.c:304
#5  0x073936be in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 5 (Thread 0xa8829b70 (LWP 6919)):
#0  0x00cae416 in __kernel_vsyscall ()
#1  0x002304dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0x06f129c7 in wait (this=0x9e948a0, mutex=0x9e7c668, time=4294967295) at thread/qwaitcondition_unix.cpp:88
#3  QWaitCondition::wait (this=0x9e948a0, mutex=0x9e7c668, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#4  0x00279030 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9e94888, th=0xb6c5f88) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x0027c7dc in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9d403f8, th=0xb6c5f88) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x0027855b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9e94888, th=0xb6c5f88) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x0027c8d2 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9d403f8, th=0xb6c5f88) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x00279533 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9e94888, th=0xb6c5f88, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x0027c8f1 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9d403f8, th=0xb6c5f88) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#10 0x00279533 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9e94888, th=0xb6c5f88, previous=0xb276ed0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#11 0x0027a95e in ThreadWeaver::ThreadRunHelper::run (this=0xa88292f4, parent=0x9e94888, th=0xb6c5f88) at ../../../threadweaver/Weaver/Thread.cpp:87
#12 0x0027b07b in ThreadWeaver::Thread::run (this=0xb6c5f88) at ../../../threadweaver/Weaver/Thread.cpp:142
#13 0x06f11df9 in QThreadPrivate::start (arg=0xb6c5f88) at thread/qthread_unix.cpp:266
#14 0x0022bcc9 in start_thread (arg=0xa8829b70) at pthread_create.c:304
#15 0x073936be in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 4 (Thread 0xa8028b70 (LWP 6920)):
#0  0x00cae416 in __kernel_vsyscall ()
#1  0x002304dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0x06f129c7 in wait (this=0x9e948a0, mutex=0x9e7c668, time=4294967295) at thread/qwaitcondition_unix.cpp:88
#3  QWaitCondition::wait (this=0x9e948a0, mutex=0x9e7c668, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#4  0x00279030 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9e94888, th=0xad059a18) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x0027c7dc in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9d403f8, th=0xad059a18) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x0027855b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9e94888, th=0xad059a18) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x0027c8d2 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9d403f8, th=0xad059a18) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x00279533 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9e94888, th=0xad059a18, previous=0xac82d70) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x0027a95e in ThreadWeaver::ThreadRunHelper::run (this=0xa80282f4, parent=0x9e94888, th=0xad059a18) at ../../../threadweaver/Weaver/Thread.cpp:87
#10 0x0027b07b in ThreadWeaver::Thread::run (this=0xad059a18) at ../../../threadweaver/Weaver/Thread.cpp:142
#11 0x06f11df9 in QThreadPrivate::start (arg=0xad059a18) at thread/qthread_unix.cpp:266
#12 0x0022bcc9 in start_thread (arg=0xa8028b70) at pthread_create.c:304
#13 0x073936be in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 3 (Thread 0xb20feb70 (LWP 6939)):
#0  0x00cae416 in __kernel_vsyscall ()
#1  0x002304dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0x06f129c7 in wait (this=0xa58f63a0, mutex=0xa5e90f08, time=4294967295) at thread/qwaitcondition_unix.cpp:88
#3  QWaitCondition::wait (this=0xa58f63a0, mutex=0xa5e90f08, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#4  0x00279030 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0xa58f6388, th=0xa5ba8900) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x0027c7dc in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0xafbe56f0, th=0xa5ba8900) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x0027855b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0xa58f6388, th=0xa5ba8900) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x0027c8d2 in ThreadWeaver::WorkingHardState::applyForWork (this=0xafbe56f0, th=0xa5ba8900) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x00279533 in ThreadWeaver::WeaverImpl::applyForWork (this=0xa58f6388, th=0xa5ba8900, previous=0xa579ea88) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x0027a95e in ThreadWeaver::ThreadRunHelper::run (this=0xb20fe2f4, parent=0xa58f6388, th=0xa5ba8900) at ../../../threadweaver/Weaver/Thread.cpp:87
#10 0x0027b07b in ThreadWeaver::Thread::run (this=0xa5ba8900) at ../../../threadweaver/Weaver/Thread.cpp:142
#11 0x06f11df9 in QThreadPrivate::start (arg=0xa5ba8900) at thread/qthread_unix.cpp:266
#12 0x0022bcc9 in start_thread (arg=0xb20feb70) at pthread_create.c:304
#13 0x073936be in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 2 (Thread 0xb18fdb70 (LWP 6940)):
#0  0x00cae416 in __kernel_vsyscall ()
#1  0x002304dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0x06f129c7 in wait (this=0xa58f63a0, mutex=0xa5e90f08, time=4294967295) at thread/qwaitcondition_unix.cpp:88
#3  QWaitCondition::wait (this=0xa58f63a0, mutex=0xa5e90f08, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#4  0x00279030 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0xa58f6388, th=0xa57a5240) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x0027c7dc in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0xafbe56f0, th=0xa57a5240) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x0027855b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0xa58f6388, th=0xa57a5240) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x0027c8d2 in ThreadWeaver::WorkingHardState::applyForWork (this=0xafbe56f0, th=0xa57a5240) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x00279533 in ThreadWeaver::WeaverImpl::applyForWork (this=0xa58f6388, th=0xa57a5240, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x0027a95e in ThreadWeaver::ThreadRunHelper::run (this=0xb18fd2f4, parent=0xa58f6388, th=0xa57a5240) at ../../../threadweaver/Weaver/Thread.cpp:87
#10 0x0027b07b in ThreadWeaver::Thread::run (this=0xa57a5240) at ../../../threadweaver/Weaver/Thread.cpp:142
#11 0x06f11df9 in QThreadPrivate::start (arg=0xa57a5240) at thread/qthread_unix.cpp:266
#12 0x0022bcc9 in start_thread (arg=0xb18fdb70) at pthread_create.c:304
#13 0x073936be in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb6585710 (LWP 6646)):
[KCrash Handler]
#7  0x00cae416 in __kernel_vsyscall ()
#8  0x072ed941 in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#9  0x072f0e42 in abort () at abort.c:92
#10 0x06f082dc in qt_message_output (msgType=QtFatalMsg, buf=0x9df1ff38 "ASSERT: \"i >= 0 && i < size()\" in file /usr/include/qt4/QtCore/qstring.h, line 701") at global/qglobal.cpp:2259
#11 0x06f084aa in qt_message (msgType=<value optimized out>, msg=0x7080a7c "ASSERT: \"%s\" in file %s, line %d", ap=0xbff94a54 "\225\324'\004\340\246'\004\275\002") at global/qglobal.cpp:2305
#12 0x06f085b9 in qFatal (msg=0x7080a7c "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2488
#13 0x06f08645 in qt_assert (assertion=0x427d495 "i >= 0 && i < size()", file=0x427a6e0 "/usr/include/qt4/QtCore/qstring.h", line=701) at global/qglobal.cpp:2004
#14 0x040dd923 in QString::at (this=0xbff94bc8, i=0) at /usr/include/qt4/QtCore/qstring.h:701
#15 0x041fcda4 in KateViInputModeManager::feedKeyPresses (this=0xb502208, keyPresses=...) at /home/tenchi/projects/kdevelop/kate/part/vimode/kateviinputmodemanager.cpp:153
#16 0x041fd17d in KateViInputModeManager::repeatLastChange (this=0xb502208) at /home/tenchi/projects/kdevelop/kate/part/vimode/kateviinputmodemanager.cpp:216
#17 0x0420a19d in KateViNormalMode::commandRepeatLastChange (this=0xba6c708) at /home/tenchi/projects/kdevelop/kate/part/vimode/katevinormalmode.cpp:1268
#18 0x04211288 in KateViCommand::execute (this=0xa8adf50) at /home/tenchi/projects/kdevelop/kate/part/vimode/katevicommand.cpp:38
#19 0x0420c888 in KateViNormalMode::executeCommand (this=0xba6c708, cmd=0xa8adf50) at /home/tenchi/projects/kdevelop/kate/part/vimode/katevinormalmode.cpp:401
#20 0x0420e2a3 in KateViNormalMode::handleKeypress (this=0xba6c708, e=0xbff95564) at /home/tenchi/projects/kdevelop/kate/part/vimode/katevinormalmode.cpp:336
#21 0x041fd27e in KateViInputModeManager::handleKeypress (this=0xb502208, e=0xbff95564) at /home/tenchi/projects/kdevelop/kate/part/vimode/kateviinputmodemanager.cpp:79
#22 0x041e2934 in KateViewInternal::keyPressEvent (this=0xb9d3818, e=0xbff95564) at /home/tenchi/projects/kdevelop/kate/part/view/kateviewinternal.cpp:2260
#23 0x041e1776 in KateViewInternal::eventFilter (this=0xb9d3818, obj=0xb9d3818, e=0xbff95564) at /home/tenchi/projects/kdevelop/kate/part/view/kateviewinternal.cpp:2145
#24 0x0701329a in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x9a55be0, receiver=0xb9d3818, event=0xbff95564) at kernel/qcoreapplication.cpp:847
#25 0x01b2efb9 in QApplicationPrivate::notify_helper (this=0x9a55be0, receiver=0xb9d3818, e=0xbff95564) at kernel/qapplication.cpp:4392
#26 0x01b36ac9 in QApplication::notify (this=0xbff9617c, receiver=0xb9d3818, e=0xbff95564) at kernel/qapplication.cpp:3857
#27 0x0182401a in KApplication::notify (this=0xbff9617c, receiver=0xb9d3818, event=0xbff95564) at ../../kdeui/kernel/kapplication.cpp:310
#28 0x0805165c in KDevelopApplication::notify (this=0xbff9617c, receiver=0xb9d3818, event=0xbff95564) at /home/tenchi/projects/kdevelop/kdevelop/app/main.cpp:90
#29 0x07013b3b in QCoreApplication::notifyInternal (this=0xbff9617c, receiver=0xb9d3818, event=0xbff95564) at kernel/qcoreapplication.cpp:732
#30 0x01b2eb9e in sendSpontaneousEvent (receiver=0xb9d3818, event=0x6) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#31 qt_sendSpontaneousEvent (receiver=0xb9d3818, event=0x6) at kernel/qapplication.cpp:5388
#32 0x01beb69d in QKeyMapper::sendKeyEvent (keyWidget=0xb9d3818, grab=false, type=QEvent::KeyPress, code=46, modifiers=..., text=..., autorepeat=<value optimized out>, count=<value optimized out>, nativeScanCode=60, nativeVirtualKey=46, nativeModifiers=0) at kernel/qkeymapper_x11.cpp:1867
#33 0x01bedb49 in QKeyMapperPrivate::translateKeyEvent (this=0x9a81540, keyWidget=0xb9d3818, event=0xbff95c2c, grab=false) at kernel/qkeymapper_x11.cpp:1837
#34 0x01bc1387 in QApplication::x11ProcessEvent (this=0xbff9617c, event=0xbff95c2c) at kernel/qapplication_x11.cpp:3429
#35 0x01bf136a in x11EventSourceDispatch (s=0x9a58da8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#36 0x0154c855 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#37 0x01550668 in ?? () from /lib/libglib-2.0.so.0
#38 0x01550848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#39 0x07042565 in QEventDispatcherGlib::processEvents (this=0x9a399e0, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#40 0x01bf0be5 in QGuiEventDispatcherGlib::processEvents (this=0x9a399e0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#41 0x07012609 in QEventLoop::processEvents (this=0xbff95f24, flags=) at kernel/qeventloop.cpp:149
#42 0x07012a8a in QEventLoop::exec (this=0xbff95f24, flags=...) at kernel/qeventloop.cpp:201
#43 0x0701700f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#44 0x01b2de07 in QApplication::exec () at kernel/qapplication.cpp:3672
#45 0x08051342 in main (argc=1, argv=0xbff96944) at /home/tenchi/projects/kdevelop/kdevelop/app/main.cpp:468

Reported using DrKonqi
Comment 1 Milian Wolff 2010-11-28 22:18:38 UTC
Erlend: this code does not make any sense:

        if (decoded.length() > 1 ) {
          key = KateViKeyParser::getInstance()->vi2qt(decoded);
        } else {
          key = int(decoded.at(0).toUpper().toAscii());
          text = decoded.at(0);

maybe you swapped the conditionals logic?
Comment 2 Christoph Cullmann 2010-12-02 20:48:33 UTC
SVN commit 1202929 by cullmann:

ehamberg:

    make sure length is > 0
    
    skip repeating (empty) key press if this is not the case.
    
BUG: 258203


 M  +3 -2      kateviinputmodemanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202929