make sure length is > 0

skip repeating (empty) key press if this is not the case.

BUG: 258203